Fixed issue #15 (home page horizontal scrollbar)
    1. Fixed issue #15
    (https://github.com/lstanard/american-spoon/issues/15)
        - Reduced font-size/padding on recipe image hovers

--- a/_sass/_modules/_recipes-grid.scss
+++ b/_sass/_modules/_recipes-grid.scss
@@ -28,12 +28,12 @@
 				background-color: rgba(255,255,255,.85);
 				color: $pumpkin;
 				display: table;
-				font-size: 19px;
-				font-size: 1.9rem;
+				font-size: 15px;
+				font-size: 1.5rem;
 				height: 100%;
-				line-height: 24px;
-				line-height: 2.4rem;
-				padding: 0 45px;
+				line-height: 22px;
+				line-height: 2.2rem;
+				padding: 0 15px;
 				position: absolute;
 				text-align: center;
 				text-transform: uppercase;
@@ -72,6 +72,20 @@
 		a:visited {
 			figcaption {
 				padding: 0;
+			}
+		}
+	}
+	@include respond($lrg) {
+		a:link,
+		a:visited {
+			figcaption {
+				h4 {
+					font-size: 19px;
+					font-size: 1.9rem;
+					line-height: 24px;
+					line-height: 2.4rem;
+					padding: 0 45px;
+				}
 			}
 		}
 	}
